# api-endpoint-stats

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Runbook.md  app.py  dashboard-checker.sh  docker-compose.yml  main.tf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh  status.md
backups/: postgres-backup-20250429-105537.sql
docs/: impl_phase1.md  impl_phase2.md  impl_phase3.md  impl_phase4.md  impl_phase5.md  implementation_checklist.md  kubernetes_implementation_plan.md  project_structure.md  reorganization_plan.md  status.md
k8s/: flask-api.yaml  ingress.yaml  namespace.yaml  persistent-volumes.yaml  postgres.yaml  redis.yml  secrets.yaml
k8s/cache/: redis.yaml
k8s/core/: flask-api.yaml
k8s/database/: postgres.yaml
k8s/monitoring/: alertmanager-config.yaml  alertmanager-deployment.yaml  alertmanager-service.yaml  create-dashboard-configmap.yaml  fluentd-configmap.yaml  fluentd-daemonset.yaml  fluentd-rbac.yaml  fluentd-simple-configmap.yaml  grafana-configmap.yaml  grafana-dashboards-configmap.yaml  grafana-deployment.yaml  grafana-pvc.yaml  grafana-secret.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-operator-crds.yaml  prometheus-pvc.yaml  prometheus-rbac.yaml  prometheus-rules-configmap.yaml  prometheus-rules.yaml  service-monitors.yaml
k8s/networking/: ingress.yaml
k8s/security/: secrets.yaml
scripts/: dashboard-checker.py  setup.sh
tests/: conftest.py  test_routes.py
