[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/venv/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
extend_skip = ['venv']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ['venv/']

[tool.flake8]
exclude = [
    'venv/*',
    '.git',
    '__pycache__',
    'build',
    'dist'
]
max-line-length = 88
extend-ignore = 'E203'
per-file-ignores = [
    '__init__.py: F401'
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.ruff]
line-length = 79
target-version = "py311"

# Enable all rules by default, then selectively disable
select = ["ALL"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "FIX002",  # line-contains-todo
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "PLR2004",  # magic-value-comparison
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # Use of assert detected
    "PLR0913",  # Too many arguments to function call
]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["app"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
